Sun Oct 21 21:56:02 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Forbid output tokens beginning with "MAN_".

Sun Oct 21 21:52:43 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac: Rationalise use of comments. Use more vertical
	  whitespace.

Sun Oct 21 21:12:46 BST 2007  Colin Watson  <cjwatson@debian.org>

	* gnulib: Import .po files (--po-base=gnulib/po --po-domain=man-db).
	* configure.ac (AC_CONFIG_FILES): Generate gnulib/po/Makefile.in.
	* Makefile.am (SUBDIRS): Build gnulib/po.
	* .bzrignore: Ignore gnulib/po. This is contrary to our usual
	  practice, since this is generated by autogen.sh; but gnulib-tool
	  gives us full .po files which are then stripped down to just the
	  parts of Gnulib we use by make, so adding them to bzr is
	  inconvenient.

Sun Oct 21 19:46:26 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/man.c (man_getopt): Fix reversed handling of -f and -k in the
	  "incompatible options" message.

Sun Oct 21 19:43:27 BST 2007  Colin Watson  <cjwatson@debian.org>

	* configure.ac (CFLAGS): Add -Wformat-security.
	* src/man.c (man_getopt): Use %s as the format string for the
	  "incompatible options" message since the message itself is not a
	  string literal. (This is only a security problem in the presence
	  of hostile translators.)

Sun Oct 21 17:59:13 BST 2007  Colin Watson  <cjwatson@debian.org>

	* man/Rules.man (SED_ARGS): Move to ...
	* man/replace.sin: ... here.
	* man/Rules.man (.man1.1, .man5.5, .man8.8): Use replace.sed to
	  shorten build output.
	* configure.ac (AC_CONFIG_FILES): Generate man/replace.sed from
	  man/replace.sin.
	* .bzrignore: Ignore man/replace.sed.

Sun Oct 21 13:38:09 BST 2007  Colin Watson  <cjwatson@debian.org>

	* src/check_mandirs.c (purge_missing): If there is no content, that
	  might just be because the key was already freed while purging an
	  earlier multi key, so skip to the next key rather than breaking
	  out of the loop.
